--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2746,7 +2746,7 @@ input, select, textarea {
 			}
 
 			.tiles article.style11 > .image:before {
-				background-color: #f8e6ff;
+				background-color: #692C89;
 			}
 			
 
