--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2352,6 +2352,12 @@ input, select, textarea {
 				width: 100%;
 			}
 
+		.sio-images {
+			display: flex;
+			margin: 0 0 3em 0;
+			width: 100%;
+		}
+
 		.image.main {
 			display: block;
 			margin: 0 0 3em 0;
