--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2359,8 +2359,8 @@ input, select, textarea {
 			margin: 0 0 3em 0;
 		}
 
-			.image.main img {
-				width: 100%;
+			.sio-images img {
+				width: 33%;
 			}
 
 		.image.main {
