--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2379,6 +2379,15 @@ input, select, textarea {
 					margin: 0 0 2em 0;
 				}
 
+				.sio-images {
+			display: flex;
+			margin: 0 0 3em 0;
+		}
+
+			.sio-images img {
+				width: 100%;
+			}
+
 			}
 
 /* Table */
