--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -146,7 +146,7 @@ input, select, textarea {
 		transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		text-decoration: none;
 		color: #585858;
-		border-bottom: dotted 1px rgba(88, 88, 88, 0.5);
+		border-bottom: solid 4px #ff9a00;
 	}
 
 		a:hover {
@@ -176,6 +176,7 @@ input, select, textarea {
 
 		h1 a {
 			color: inherit;
+			
 		}
 
 		@media screen and (max-width: 736px) {
