--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3213,11 +3213,11 @@ input, select, textarea {
 
 		}
 
-/* Footer */
+/*  */
 
 	#footer {
 		padding: 5em 0 6em 0 ;
-		background-color: #f6f6f6;
+		background-color: #D5EDF6;
 	}
 
 		#footer > .inner {
