--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3217,7 +3217,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 5em 0 6em 0 ;
-		background-color: #D5EDF6;
+		background-color: #f4f6f8;
 	}
 
 		#footer > .inner {
